styles/sass/layout/_destination.scss
// HOME
.destination {
    background-image: url(../starter-code/assets/destination/background-destination-mobile.jpg);

    @media (min-width: 35rem) {
        background-position: center center; // making text more readable
        background-image: url(../starter-code/assets/destination/background-destination-tablet.jpg);
    }

    @media (min-width: 45rem) {
        background-image: url(../starter-code/assets/destination/background-destination-desktop.jpg);
    }
}

.grid-container--destination {
    gap: 2rem;
    grid-template-areas: 
        'title'
        'image'
        'tabs'
        'content'
    ;

    .numbered-title {
        grid-area: title;
    }
    > picture {
        grid-area: image;
        max-width: 60%;
    }
    > .tab-list {
        grid-area: tabs;
        button {
            background-color: transparent;
        }
    }
    >.destination-info {
        grid-area: content;
    }
}
.destination-meta {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-top: 1px solid hsl(0deg 0% 100% / 10%);
    padding-top: 2.5rem;
    margin-top: 2.5rem;

    p {
        font-size: 1.75rem;
    }
}

@media (min-width: 35rem){
    .numbered-title {
        justify-self: start;
        margin-top: 2rem;
    }

    .destination-meta {
        flex-direction: row;
        justify-content: space-evenly;
    }
}

@media (min-width: 45rem) {
    .grid-container--destination {
        justify-items: start;
        align-content: center;
        grid-template-areas:
            '. title title .'
            '. image tabs .'
            '. image content .'
        ;

        > picture {
            max-width: 90%;
        }

        .destination-info {
            h2 {
                font-size: 6rem !important;
            }
            p {
                max-width: 28rem;
            }
            .destination-meta {
                gap: min(6vw, 6rem);
                justify-content: flex-start;
            }
        }
    }
}

